@@ -1,4 +1,4 @@
-.TH KPSEACCESS 1 "4 January 1998" "Kpathsea @VERSION@"
+.TH KPSEACCESS 1 "7 April 2010" "Kpathsea @VERSION@"
 .\"=====================================================================
 .if n .ds MP MetaPost
 .if t .ds MP MetaPost
@@ -20,7 +20,7 @@
 kpseaccess \- determine whether a file can be accessed
 .SH SYNOPSIS
 .B kpseaccess
-.I [-rwx]
+.RB [ \-rwx ]
 .I file
 .\"=====================================================================
 .SH DESCRIPTION
@@ -28,13 +28,13 @@ Exit successfully if
 .I file
 can be accessed with the specified mode.
 The mode is one or more letters of
-.IR rwx ,
+.BR rwx ,
 where
-.I r
+.B r
 is for readable,
-.I w
+.B w
 is for writable, and
-.I x
+.B x
 is for executable.
 .PP
 The difference between
